Hopefully fixed safari text cut off in input fields

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -22,7 +22,9 @@ p {
 input,
 select {
     border: 2px solid lightgrey;
-
+    ::placeholder {
+        overflow: visible
+    }
     &:focus {
         border: 2px solid darkgrey;
     }
